updated result, removed the previously set &nbsp that was reserving space, added min height via css to avoid the "jump" if the result is calculated and shown

--- a/src/App/Form/style.css
+++ b/src/App/Form/style.css
@@ -38,6 +38,7 @@
     margin: 10px 0 10px 0;
     text-align: center;
     word-wrap: break-word;
+    min-height: 30px;
 }
 
 .form__container {
@@ -78,7 +79,6 @@
 
 .form__button--convert {
     background-color: rgba(43, 235, 43, 0.581);
-    transition: background-color 0.5s ease;
 }
 
 .form__button--convert:hover {
@@ -102,7 +102,6 @@
     height: 20px;
     border: 3px solid black;
     margin: 0 3px 3px 0;
-    transition: background-color 0.3s;
 }
 
 .form__radio:checked {
